--- a/index.html
+++ b/index.html
@@ -6,39 +6,47 @@
     <title>GasSolución 🇪🇨</title>
     <style>
         body { font-family: 'Segoe UI', sans-serif; text-align: center; background-color: #f7f9fc; padding: 20px; color: #333; }
-        .container { background: white; padding: 30px; border-radius: 20px; box-shadow: 0 8px 16px rgba(0,0,0,0.1); max-width: 400px; margin: auto; }
-        h1 { color: #d32f2f; margin-bottom: 5px; }
-        input { width: 90%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 8px; font-size: 16px; }
-        .btn-registro { background: #d32f2f; color: white; border: none; padding: 15px; width: 100%; border-radius: 8px; font-weight: bold; cursor: pointer; font-size: 16px; }
-        .btn-gas { 
-            background: #ffca28; border: none; padding: 20px; font-size: 24px; font-weight: bold; 
-            border-radius: 50%; width: 220px; height: 220px; cursor: pointer; 
-            box-shadow: 0 10px 25px rgba(255, 202, 40, 0.4); margin-top: 20px; color: #212121;
-        }
+        .container { background: white; padding: 25px; border-radius: 20px; box-shadow: 0 8px 16px rgba(0,0,0,0.1); max-width: 400px; margin: auto; }
+        h1 { color: #d32f2f; }
+        input, select { width: 90%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 8px; font-size: 16px; }
+        .btn-registro { background: #d32f2f; color: white; border: none; padding: 15px; width: 100%; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        .btn-gas { background: #ffca28; border: none; padding: 20px; font-size: 24px; font-weight: bold; border-radius: 50%; width: 200px; height: 200px; cursor: pointer; box-shadow: 0 10px 25px rgba(255, 202, 40, 0.4); margin-top: 20px; color: #212121; }
+        .pedido-card { text-align: left; background: #fffde7; padding: 15px; margin: 10px 0; border-left: 5px solid #ffca28; border-radius: 8px; font-size: 14px; }
         .hidden { display: none; }
-        .user-info { font-size: 0.9rem; color: #666; margin-bottom: 20px; border-bottom: 1px solid #eee; padding-bottom: 10px; }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>GasSolución</h1>
+        
         <div id="seccion-registro">
-            <p>Registra tus datos para pedir tu gas rápido.</p>
+            <p>Identifícate para continuar</p>
+            <select id="rol">
+                <option value="cliente">Soy Cliente (Quiero Gas)</option>
+                <option value="proveedor">Soy Proveedor (Vender Gas)</option>
+            </select>
             <input type="text" id="nombre" placeholder="Nombre completo">
             <input type="tel" id="telefono" placeholder="Número de celular">
-            <input type="text" id="direccion" placeholder="Dirección de entrega">
-            <button class="btn-registro" id="guardar-datos">REGISTRARME</button>
+            <input type="text" id="direccion" placeholder="Dirección (Solo clientes)">
+            <button class="btn-registro" id="guardar-datos">ENTRAR</button>
         </div>
-        <div id="seccion-pedido" class="hidden">
-            <div id="mensaje-bienvenida" class="user-info"></div>
-            <button class="btn-gas" id="pedir">PEDIR GAS<br>🔥</button>
-            <p><small><a href="#" id="cambiar-datos" style="color: #d32f2f;">Cambiar mis datos</a></small></p>
+
+        <div id="seccion-cliente" class="hidden">
+            <p id="bienvenida-cliente"></p>
+            <button class="btn-gas" id="pedir">PEDIR GAS 🔥</button>
+            <p><small><a href="#" onclick="cerrarSesion()">Cerrar Sesión / Cambiar datos</a></small></p>
+        </div>
+
+        <div id="seccion-proveedor" class="hidden">
+            <h3>Pedidos Pendientes</h3>
+            <div id="lista-pedidos">Cargando pedidos...</div>
+            <p><small><a href="#" onclick="cerrarSesion()">Cerrar Sesión</a></small></p>
         </div>
     </div>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-        import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { getFirestore, collection, addDoc, getDocs, query, where, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyDWGkvNQHt7URcoP2risWMBfYtdV1Un7Sk",
@@ -52,50 +60,77 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        const divRegistro = document.getElementById('seccion-registro');
-        const divPedido = document.getElementById('seccion-pedido');
-        const bienvenida = document.getElementById('mensaje-bienvenida');
+        document.getElementById('guardar-datos').onclick = async () => {
+            const rol = document.getElementById('rol').value;
+            const tlf = document.getElementById('telefono').value;
+            const nombre = document.getElementById('nombre').value;
+            const dir = document.getElementById('direccion').value;
 
-        function verificarUsuario() {
-            const usuarioGuardado = localStorage.getItem('usuarioGas');
-            if (usuarioGuardado) {
-                const user = JSON.parse(usuarioGuardado);
-                divRegistro.classList.add('hidden');
-                divPedido.classList.remove('hidden');
-                bienvenida.innerHTML = `Cliente: <b>${user.nombre}</b><br>📍 ${user.direccion}`;
+            if(!tlf || !nombre) return alert("Por favor, llena tu nombre y teléfono");
+
+            const q = query(collection(db, "usuarios"), where("telefono", "==", tlf));
+            const querySnapshot = await getDocs(q);
+
+            let usuario;
+            if (querySnapshot.empty) {
+                usuario = { nombre, telefono: tlf, direccion: dir, rol };
+                await addDoc(collection(db, "usuarios"), usuario);
             } else {
-                divRegistro.classList.remove('hidden');
-                divPedido.classList.add('hidden');
+                usuario = querySnapshot.docs[0].data();
+            }
+
+            localStorage.setItem('userGas', JSON.stringify(usuario));
+            renderizarApp();
+        };
+
+        function renderizarApp() {
+            const user = JSON.parse(localStorage.getItem('userGas'));
+            if (!user) return;
+            document.getElementById('seccion-registro').classList.add('hidden');
+            if(user.rol === 'cliente') {
+                document.getElementById('seccion-cliente').classList.remove('hidden');
+                document.getElementById('bienvenida-cliente').innerHTML = `Hola <b>${user.nombre}</b><br><small>${user.direccion}</small>`;
+            } else {
+                document.getElementById('seccion-proveedor').classList.remove('hidden');
+                escucharPedidos();
             }
         }
 
-        document.getElementById('guardar-datos').onclick = () => {
-            const nombre = document.getElementById('nombre').value;
-            const tlf = document.getElementById('telefono').value;
-            const dir = document.getElementById('direccion').value;
-            if(nombre && tlf && dir) {
-                localStorage.setItem('usuarioGas', JSON.stringify({ nombre, tlf, direccion: dir }));
-                verificarUsuario();
-            } else { alert("Llena todos los campos"); }
-        };
-
         document.getElementById('pedir').onclick = async () => {
-            const user = JSON.parse(localStorage.getItem('usuarioGas'));
+            const user = JSON.parse(localStorage.getItem('userGas'));
             try {
                 await addDoc(collection(db, "pedidos"), {
-                    nombre: user.nombre, tlf: user.tlf, direccion: user.direccion,
+                    cliente: user.nombre, tlf: user.telefono, dir: user.direccion,
                     fecha: new Date().toLocaleString(), estado: "pendiente"
                 });
-                alert("✅ ¡Pedido enviado con éxito!");
-            } catch (e) { alert("Error: " + e.message); }
+                alert("✅ ¡Pedido enviado! El repartidor ha sido notificado.");
+            } catch (e) { alert("Error al pedir: " + e.message); }
         };
 
-        document.getElementById('cambiar-datos').onclick = () => {
-            localStorage.removeItem('usuarioGas');
-            verificarUsuario();
+        function escucharPedidos() {
+            onSnapshot(collection(db, "pedidos"), (snapshot) => {
+                const lista = document.getElementById('lista-pedidos');
+                lista.innerHTML = "";
+                if(snapshot.empty) lista.innerHTML = "No hay pedidos hoy.";
+                snapshot.forEach(doc => {
+                    const p = doc.data();
+                    lista.innerHTML += `
+                        <div class="pedido-card">
+                            <b>Cliente:</b> ${p.cliente}<br>
+                            <b>Tlf:</b> ${p.tlf}<br>
+                            <b>Dir:</b> ${p.dir}<br>
+                            <small>Enviado: ${p.fecha}</small>
+                        </div>`;
+                });
+            });
+        }
+
+        window.cerrarSesion = () => {
+            localStorage.removeItem('userGas');
+            location.reload();
         };
 
-        verificarUsuario();
+        renderizarApp();
     </script>
 </body>
 </html>
