--- a/cliente.html
+++ b/cliente.html
@@ -12,23 +12,25 @@
         .animate-progress { animation: loading-bar 2s infinite ease-in-out; }
         #map-rastreo { height: 280px; width: 100%; border-radius: 2.5rem; z-index: 1; }
         .leaflet-control-attribution { display: none !important; }
+        input[type=number]::-webkit-inner-spin-button, 
+        input[type=number]::-webkit-outer-spin-button { -webkit-appearance: none; margin: 0; }
     </style>
 </head>
 <body class="bg-slate-50 min-h-screen font-sans text-slate-900">
 
     <div id="app" class="max-w-md mx-auto bg-white min-h-screen shadow-2xl flex flex-col relative overflow-hidden">
         
-        <div id="pantalla-inicio" class="flex-1 flex flex-col p-8 justify-center items-center text-center space-y-8 animate-in fade-in">
+        <div id="pantalla-inicio" class="flex-1 flex flex-col p-8 justify-center items-center text-center space-y-8 animate-in fade-in duration-500">
             <div class="space-y-2">
-                <div class="bg-red-600 w-20 h-20 rounded-[2.5rem] flex items-center justify-center mx-auto shadow-xl mb-4 text-4xl">🔥</div>
-                <h1 class="text-4xl font-black tracking-tighter uppercase">GasSolución</h1>
-                <p class="text-slate-400 font-medium italic">Hola, <span id="u-nombre-inicio" class="text-slate-900 font-bold uppercase">...</span></p>
+                <div class="bg-red-600 w-20 h-20 rounded-[2.5rem] flex items-center justify-center mx-auto shadow-xl mb-4 text-4xl shadow-red-200">🔥</div>
+                <h1 class="text-4xl font-black tracking-tighter uppercase italic">GasSolución</h1>
+                <p class="text-slate-400 font-medium italic tracking-tight">Hola, <span id="u-nombre-inicio" class="text-slate-900 font-black uppercase tracking-normal">...</span></p>
             </div>
             <div class="grid grid-cols-1 gap-4 w-full">
                 <button onclick="irAFormulario('ahora')" class="p-6 bg-slate-900 rounded-[2.5rem] text-left active:scale-95 shadow-2xl transition-all border-b-4 border-slate-700">
                     <span class="text-3xl">🚀</span>
                     <h2 class="text-white text-xl font-black uppercase mt-2">Solicitar Ahora</h2>
-                    <p class="text-slate-400 text-xs font-bold tracking-tight">Entrega inmediata en tu ubicación.</p>
+                    <p class="text-slate-400 text-xs font-bold tracking-tight">Entrega rápida en tu ubicación.</p>
                 </button>
                 <button onclick="irAFormulario('planificado')" class="p-6 bg-white border-2 border-slate-100 rounded-[2.5rem] text-left active:scale-95 shadow-lg transition-all border-b-4 border-slate-200">
                     <span class="text-3xl">🗓️</span>
@@ -36,44 +38,54 @@
                     <p class="text-slate-400 text-xs font-bold tracking-tight">Agenda para otro día u hora.</p>
                 </button>
             </div>
-            <button onclick="cerrarSesion()" class="text-slate-300 font-bold text-[10px] uppercase tracking-widest">Cerrar Sesión</button>
+            <button onclick="cerrarSesion()" class="text-slate-300 font-bold text-[10px] uppercase tracking-widest hover:text-red-600">Cerrar Sesión</button>
         </div>
 
-        <div id="pantalla-formulario" class="hidden flex-1 flex flex-col overflow-y-auto animate-in slide-in-from-right">
-            <div class="p-6 pb-2 flex justify-between items-center sticky top-0 bg-white/90 backdrop-blur-md z-20">
+        <div id="pantalla-formulario" class="hidden flex-1 flex flex-col overflow-y-auto animate-in slide-in-from-right duration-300">
+            <div class="p-6 pb-2 flex justify-between items-center sticky top-0 bg-white/80 backdrop-blur-md z-20">
                 <button onclick="regresarInicio()" class="text-slate-400 font-black text-xl bg-slate-100 w-10 h-10 rounded-full">✕</button>
-                <h2 id="txt-modo-nav" class="text-[10px] font-black uppercase tracking-widest text-red-600">Configurar Pedido</h2>
+                <h2 id="txt-modo-nav" class="text-[10px] font-black uppercase tracking-widest text-red-600 tracking-tighter">Configurar Pedido</h2>
                 <div class="w-10"></div>
             </div>
+            
             <div class="px-6 mb-4"><div id="map" class="h-44 rounded-[2.5rem] border-4 border-slate-50 shadow-inner z-10"></div></div>
+
             <div class="px-6 space-y-4 pb-40">
                 <div id="campo-fecha" class="hidden bg-blue-50 p-5 rounded-[2.5rem] border border-blue-100">
-                    <p class="text-[10px] font-black text-blue-600 uppercase mb-2 ml-2">¿Cuándo quieres el gas?</p>
+                    <p class="text-[10px] font-black text-blue-600 uppercase mb-2 ml-2 tracking-widest">¿Para cuándo lo necesitas?</p>
                     <input type="datetime-local" id="f-fecha" class="w-full bg-white p-4 rounded-2xl border-2 border-blue-100 font-bold text-slate-700 outline-none">
                 </div>
+
                 <div class="bg-slate-50 p-6 rounded-[2.5rem] border border-slate-100">
                     <div class="flex items-center gap-3 mb-4">
                         <input type="checkbox" id="check-dom" class="w-6 h-6 rounded-lg accent-red-600" checked>
-                        <label for="check-dom" class="font-black text-xs uppercase text-slate-400 tracking-widest">Gas Doméstico</label>
+                        <label for="check-dom" class="font-black text-[10px] uppercase text-slate-400 tracking-widest">Gas Doméstico</label>
                     </div>
                     <div class="grid grid-cols-3 gap-3">
-                        <input type="number" id="cd-ama" placeholder="0" class="bg-white p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg">
-                        <input type="number" id="cd-azu" placeholder="0" class="bg-white p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg">
-                        <input type="number" id="cd-nar" placeholder="0" class="bg-white p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg">
+                        <div class="text-center"><p class="text-[7px] font-black text-yellow-600 mb-1">AMA</p><input type="number" id="cd-ama" placeholder="0" class="bg-white w-full p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg"></div>
+                        <div class="text-center"><p class="text-[7px] font-black text-blue-600 mb-1">AZU</p><input type="number" id="cd-azu" placeholder="0" class="bg-white w-full p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg"></div>
+                        <div class="text-center"><p class="text-[7px] font-black text-orange-600 mb-1">NAR</p><input type="number" id="cd-nar" placeholder="0" class="bg-white w-full p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg"></div>
                     </div>
                 </div>
+
                 <div class="bg-slate-50 p-6 rounded-[2.5rem] border border-slate-100">
                     <div class="flex items-center gap-3 mb-4">
                         <input type="checkbox" id="check-ind" class="w-6 h-6 rounded-lg accent-red-600">
-                        <label for="check-ind" class="font-black text-xs uppercase text-slate-400 tracking-widest">Gas Industrial</label>
+                        <label for="check-ind" class="font-black text-[10px] uppercase text-slate-400 tracking-widest">Gas Industrial</label>
                     </div>
                     <div class="grid grid-cols-3 gap-3">
-                        <input type="number" id="ci-ama" placeholder="0" class="bg-white p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg">
-                        <input type="number" id="ci-azu" placeholder="0" class="bg-white p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg">
-                        <input type="number" id="ci-nar" placeholder="0" class="bg-white p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg">
+                        <div class="text-center"><p class="text-[7px] font-black text-yellow-600 mb-1">AMA</p><input type="number" id="ci-ama" placeholder="0" class="bg-white w-full p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg"></div>
+                        <div class="text-center"><p class="text-[7px] font-black text-blue-600 mb-1">AZU</p><input type="number" id="ci-azu" placeholder="0" class="bg-white w-full p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg"></div>
+                        <div class="text-center"><p class="text-[7px] font-black text-orange-600 mb-1">NAR</p><input type="number" id="ci-nar" placeholder="0" class="bg-white w-full p-4 rounded-2xl border-2 border-slate-200 text-center font-bold text-lg"></div>
                     </div>
                 </div>
+
+                <div class="flex justify-between items-center bg-red-50 p-6 rounded-[2.5rem] border border-red-100">
+                    <span class="font-black text-red-600 text-[10px] uppercase tracking-widest italic">💰 Propina</span>
+                    <input type="number" id="f-propina" value="0" class="w-20 bg-white p-3 rounded-2xl border-2 border-red-200 text-center font-black text-red-600">
+                </div>
             </div>
+
             <div class="fixed bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-white to-transparent z-30">
                 <button id="btn-main" onclick="realizarPedido()" class="w-full p-6 rounded-[2.5rem] font-black text-xl bg-red-600 text-white shadow-2xl active:scale-95 transition-all">CONFIRMAR PEDIDO</button>
             </div>
@@ -96,33 +108,27 @@
                     <h2 class="text-3xl font-black text-green-600 uppercase italic tracking-tighter">Repartidor en camino</h2>
                 </div>
             </div>
-            <div class="bg-slate-100 rounded-[2.5rem] overflow-hidden mb-6 shadow-xl relative border-4 border-white">
-                <div id="map-rastreo"></div>
-            </div>
+            <div class="bg-slate-100 rounded-[2.5rem] overflow-hidden mb-6 shadow-xl relative border-4 border-white"><div id="map-rastreo"></div></div>
             <div class="bg-slate-50 p-6 rounded-[2.5rem] border border-slate-100 mb-6 space-y-4">
                 <div id="info-repartidor" class="hidden flex items-center gap-4 border-b border-slate-200 pb-4">
                     <div class="w-12 h-12 bg-red-100 rounded-full flex items-center justify-center text-xl shadow-inner">👤</div>
-                    <div>
-                        <p class="text-[9px] font-black text-slate-400 uppercase">Distribuidor asignado</p>
-                        <p id="nombre-rep" class="font-black text-lg text-slate-900 leading-none">...</p>
-                    </div>
+                    <div><p class="text-[9px] font-black text-slate-400 uppercase">Distribuidor</p><p id="nombre-rep" class="font-black text-lg text-slate-900 leading-none lowercase uppercase tracking-tighter">...</p></div>
                 </div>
-                <div id="resumen-items" class="text-sm font-bold text-slate-500 italic leading-tight"></div>
+                <div id="resumen-items" class="text-xs font-bold text-slate-500 italic leading-tight uppercase tracking-tighter"></div>
             </div>
             <button id="btn-cancelar" class="w-full p-5 rounded-[2rem] border-2 border-slate-100 text-slate-300 font-black uppercase text-[10px] tracking-widest">Anular Pedido</button>
         </div>
 
-        <div id="pantalla-confirmacion" class="hidden flex-1 flex flex-col p-8 justify-center items-center text-center space-y-8 animate-in zoom-in">
+        <div id="pantalla-confirmacion" class="hidden flex-1 flex flex-col p-8 justify-center items-center text-center space-y-8 animate-in zoom-in duration-500">
             <div class="w-24 h-24 bg-green-100 rounded-full flex items-center justify-center text-5xl shadow-inner animate-bounce">✅</div>
             <div class="space-y-2">
-                <h2 class="text-4xl font-black uppercase tracking-tighter text-slate-900 leading-none">¿Llegó tu Pedido?</h2>
-                <p class="text-slate-400 font-medium italic">Confirma que recibiste el tanque de gas correctamente.</p>
+                <h2 class="text-4xl font-black uppercase tracking-tighter text-slate-900 leading-none italic">¿Gas Recibido?</h2>
+                <p class="text-slate-400 font-medium italic">Confirma si el repartidor te entregó los tanques correctamente.</p>
             </div>
             <div class="w-full space-y-4">
-                <button id="btn-confirmar-entrega" class="w-full p-7 bg-green-600 text-white rounded-[2.5rem] font-black text-2xl shadow-2xl active:scale-95 transition-all shadow-green-200 uppercase">
-                    Sí, Recibido
+                <button id="btn-confirmar-entrega" class="w-full p-7 bg-green-600 text-white rounded-[2.5rem] font-black text-2xl shadow-2xl active:scale-95 transition-all shadow-green-200 uppercase tracking-tighter">
+                    SÍ, RECIBIDO
                 </button>
-                <p class="text-[10px] font-black text-slate-300 uppercase tracking-widest">Al presionar, cerraremos el pedido.</p>
             </div>
         </div>
 
@@ -187,35 +193,42 @@
             const pos = marker.getLatLng();
             btn.disabled = true; btn.innerText = "PROCESANDO...";
 
-            const pedido = {
-                uidC: userGlobal.uid,
-                nombre: userGlobal.displayName || "Cliente",
-                lat: pos.lat, lng: pos.lng,
-                estado: 'pendiente',
-                modo: modoActual,
-                propina: document.getElementById('f-propina').value || 0,
-                fechaPlan: modoActual === 'planificado' ? document.getElementById('f-fecha').value : 'inmediato',
-                fechaCrea: new Date().toISOString(),
-                items: []
-            };
-
-            const conf = [
-                {id:'cd-ama', t:'Dom', c:'Amarillo', chk:'check-dom'}, {id:'cd-azu', t:'Dom', c:'Azul', chk:'check-dom'}, {id:'cd-nar', t:'Dom', c:'Naranja', chk:'check-dom'},
-                {id:'ci-ama', t:'Ind', c:'Amarillo', chk:'check-ind'}, {id:'ci-azu', t:'Ind', c:'Azul', chk:'check-ind'}, {id:'ci-nar', t:'Ind', c:'Naranja', chk:'check-ind'}
-            ];
-
-            conf.forEach(i => {
-                const val = parseInt(document.getElementById(i.id).value);
-                if (val > 0 && document.getElementById(i.chk).checked) pedido.items.push({n: val, t: i.t, c: i.c});
-            });
-
-            if (pedido.items.length === 0) {
-                alert("⚠️ Selecciona al menos un tanque."); btn.disabled = false; btn.innerText = "CONFIRMAR PEDIDO"; return;
-            }
-
             try {
+                const pedido = {
+                    uidC: userGlobal.uid,
+                    nombre: userGlobal.displayName || "Cliente",
+                    lat: pos.lat, lng: pos.lng,
+                    estado: 'pendiente',
+                    modo: modoActual,
+                    propina: document.getElementById('f-propina').value || 0,
+                    fechaPlan: modoActual === 'planificado' ? document.getElementById('f-fecha').value : 'inmediato',
+                    fechaCrea: new Date().toISOString(),
+                    items: []
+                };
+
+                const conf = [
+                    {id:'cd-ama', t:'Dom', c:'Amarillo', chk:'check-dom'}, {id:'cd-azu', t:'Dom', c:'Azul', chk:'check-dom'}, {id:'cd-nar', t:'Dom', c:'Naranja', chk:'check-dom'},
+                    {id:'ci-ama', t:'Ind', c:'Amarillo', chk:'check-ind'}, {id:'ci-azu', t:'Ind', c:'Azul', chk:'check-ind'}, {id:'ci-nar', t:'Ind', c:'Naranja', chk:'check-ind'}
+                ];
+
+                conf.forEach(i => {
+                    const el = document.getElementById(i.id);
+                    const val = el && el.value ? parseInt(el.value) : 0;
+                    const checkbox = document.getElementById(i.chk);
+                    if (val > 0 && checkbox && checkbox.checked) pedido.items.push({n: val, t: i.t, c: i.c});
+                });
+
+                if (pedido.items.length === 0) {
+                    alert("⚠️ Selecciona cantidad y marca el tipo de gas."); 
+                    btn.disabled = false; btn.innerText = "CONFIRMAR PEDIDO"; return;
+                }
+
                 await addDoc(collection(db, "pedidos"), pedido);
-            } catch (e) { alert("Error: " + e.message); btn.disabled = false; }
+                // Cambio inmediato para evitar que el botón se quede pegado
+                document.getElementById('pantalla-formulario').classList.add('hidden');
+                document.getElementById('pantalla-estado').classList.remove('hidden');
+
+            } catch (e) { alert("Error: " + e.message); btn.disabled = false; btn.innerText = "CONFIRMAR PEDIDO"; }
         };
 
         function escucharPedidos() {
@@ -231,20 +244,17 @@
                     const data = docRef.data();
                     const id = docRef.id;
 
-                    // CASO FINALIZADO POR REPARTIDOR -> USUARIO DEBE CONFIRMAR
+                    // LÓGICA DE CONFIRMACIÓN OBLIGATORIA
                     if (data.estado === 'finalizado') {
                         pI.classList.add('hidden'); pF.classList.add('hidden'); pE.classList.add('hidden');
                         pC.classList.remove('hidden');
-
                         document.getElementById('btn-confirmar-entrega').onclick = async () => {
                             await deleteDoc(doc(db, "pedidos", id));
                             pC.classList.add('hidden');
-                            regresarInicio();
                         };
                         return;
                     }
 
-                    // CASO RASTREO / BÚSQUEDA
                     pI.classList.add('hidden'); pF.classList.add('hidden'); pC.classList.add('hidden');
                     pE.classList.remove('hidden');
 
@@ -260,8 +270,7 @@
                         document.getElementById('info-repartidor').classList.add('hidden');
                         initMapRastreo(data.lat, data.lng, null, null);
                     }
-
-                    document.getElementById('resumen-items').innerText = "Resumen: " + data.items.map(i => `${i.n} ${i.t} ${i.c}`).join(', ');
+                    document.getElementById('resumen-items').innerText = "Pedido: " + data.items.map(i => `${i.n} ${i.t} ${i.c}`).join(', ');
                     document.getElementById('btn-cancelar').onclick = () => { if(confirm("¿Anular pedido?")) deleteDoc(doc(db, "pedidos", id)); };
                 } else {
                     pE.classList.add('hidden'); pC.classList.add('hidden'); pF.classList.add('hidden');
